--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
   "name": "postcss-safe-area-inset",
-  "version": "1.0.14",
+  "version": "1.0.17",
   "description": "postcss safe-area-inset for page scale",
   "keywords": [
-    "safe-area-inset",
+    "page scale",
     "postcss plugin",
-    "page scale"
+    "safe-area-inset"
   ],
-  "homepage": "https://github.com/ustccjw/postcss-safe-area-inset#readme",
-  "bugs": {
-    "url": "https://github.com/ustccjw/postcss-safe-area-inset/issues"
-  },
   "license": "MIT",
   "author": "ustccjw",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ustccjw/postcss-safe-area-inset.git"
+    "url": "https://github.com/ustccjw/postcss-safe-area-inset"
   },
   "scripts": {
-    "build": "tnpm run clean && babel src -d lib",
-    "clean": "rimraf lib",
+    "precommit": "lint-staged",
+    "commitmsg": "commitlint -e",
     "lint": "eslint .",
-    "prepublish": "tnpm test && tnpm run build",
+    "prepublishOnly": "npm run test",
     "test": "jest"
   },
   "devDependencies": {
-    "babel-cli": "6",
-    "babel-preset-ustccjw": "1",
-    "eslint": "3",
+    "@commitlint/cli": "6",
+    "@commitlint/config-angular": "6",
+    "eslint": "4",
     "eslint-config-ustccjw": "1",
+    "husky": "0.14",
     "jest": "20",
     "postcss": "6",
-    "pre-commit": "1",
-    "rimraf": "2"
+    "pre-commit": "1"
   },
   "peerDependencies": {
     "postcss": "6"
   },
   "engines": {
-    "node": "7"
+    "node": ">= 9.0.0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-angular"
+    ]
   },
   "jest": {
     "testMatch": [
       "**/test/**/*.js"
     ]
   },
-  "pre-commit": [
-    "lint"
-  ]
+  "lint-staged": {
+    "*.js": "eslint"
+  }
 }
